Fixed spacing on locations

--- a/resources/style.css
+++ b/resources/style.css
@@ -95,15 +95,19 @@ header nav{
   display: flex;
   flex-direction: column;
 }
-.LocationsContainer{
+.LocationsContainerBottom{
   display: flex;
   margin-top: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
+  flex-direction: row;
 }
-.LocationsContainerText{
+.LocationsContainerBlock{
   background-color: black;
   height: 300px;
   width: 300px;
-
+  margin-left: 20px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;\
+  justify-content:
+  align-items: center;
 }
